[package]
name = "thetadatadx-mcp"
version = "8.0.11"
edition = "2021"
description = "MCP server for ThetaDataDx — gives LLMs instant access to ThetaData market data"
license = "Apache-2.0"
repository = "https://github.com/userFRM/ThetaDataDx"

[[bin]]
name = "thetadatadx-mcp"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx" }
tdbe = { version = "0.12.0", path = "../../crates/tdbe" }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Match the main workspace's strict bar. This crate is `[workspace.exclude]`d
# in the root `Cargo.toml` (standalone manifest, not a member), so it can't
# inherit via `[lints] workspace = true` — mirror the rules locally.
[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
