[package]
name = "thetadatadx-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "MCP server for ThetaDataDx — gives LLMs instant access to ThetaData market data"
license = "Apache-2.0"
repository = "https://github.com/userFRM/ThetaDataDx"

# Binary — not published to crates.io. Only `thetadatadx-rs` is published
# per the publish-crate CI job.
publish = false

[workspace]

[[bin]]
name = "thetadatadx-mcp"
path = "src/main.rs"

[dependencies]
thetadatadx = { package = "thetadatadx-rs", path = "../../thetadatadx-rs", features = ["__internal"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = "1.8.2"

# Match the main workspace's strict bar. This crate declares its own
# `[workspace]` table so it's an independent workspace — it can't inherit
# via `[lints] workspace = true` from the parent repo. Mirror the rules
# locally to keep `cargo clippy` parity.
[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
