[package]
name = "thetadatadx-server"
version = "8.0.15"
edition = "2021"
rust-version = "1.85"
authors = ["userFRM"]
description = "Drop-in Rust replacement for the ThetaData Java Terminal"
documentation = "https://docs.rs/thetadatadx-server"
homepage = "https://github.com/userFRM/ThetaDataDx"
repository = "https://github.com/userFRM/ThetaDataDx"
license = "Apache-2.0"
keywords = ["thetadata", "terminal", "market-data", "rest-api", "websocket"]
categories = ["finance", "network-programming", "web-programming::http-server"]

[workspace]

[[bin]]
name = "thetadatadx-server"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx", features = ["config-file"] }
rustls = { version = "0.23.38", features = ["ring"] }
tdbe = { version = "0.12.1", path = "../../crates/tdbe" }
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.1", features = ["full"] }
sonic-rs = "0.5.8"
serde = { version = "1.0.228", features = ["derive"] }
# `tower` is already in the tree as a transitive dep of axum 0.8; we depend
# on it directly for `ConcurrencyLimitLayer`. `tower_governor` (per-IP rate
# limiting) extends this with keyed quotas -- see `router::build()` for the
# composition.
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# `serde_urlencoded` parses the raw query string inside the custom
# `BoundedQuery` extractor. It's already in-tree as an axum transitive
# dep; the direct dependency here keeps the extractor self-contained
# and immune to future axum internals shifting.
serde_urlencoded = "0.7.1"
clap = { version = "4.6.1", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4"] }

# Constant-time equality for the shutdown token comparison. A naive
# `String ==` early-exits on the first differing byte and is a timing
# oracle for remote token-guessing attacks.
subtle = "2.6.1"

# `Zeroizing<String>` scrubs the CLI password from the process's memory
# image as soon as it drops. Without this, `/proc/<pid>/mem` (or a core
# dump) would retain the plaintext for the lifetime of the process even
# after `Credentials` internally moved it into its own `Zeroizing`.
zeroize = "1.8.2"

# Match the main workspace's strict bar. This crate declares its own
# `[workspace]` table (line 15) so it's an independent workspace — it
# can't inherit via `[lints] workspace = true` from the parent repo.
# Mirror the rules locally to keep `cargo clippy` parity.
[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
