[package]
name = "thetadatadx-server"
version = "13.0.0-rc.6"
edition = "2021"
rust-version = "1.88"
authors = ["userFRM"]
description = "Drop-in Rust replacement for the ThetaData JVM terminal"
homepage = "https://github.com/userFRM/ThetaDataDx"
repository = "https://github.com/userFRM/ThetaDataDx"
license = "Apache-2.0"
keywords = ["thetadata", "terminal", "market-data", "rest-api", "websocket"]
categories = ["finance", "network-programming", "web-programming::http-server"]

# Binary — not published to crates.io. Only `thetadatadx` is published
# per the publish-crate CI job.
publish = false

[workspace]

[[bin]]
name = "thetadatadx-server"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx", features = ["config-file", "__internal"] }
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "tls12", "logging"] }
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.1", features = ["full"] }
sonic-rs = "0.5.8"
serde = { version = "1.0.228", features = ["derive"] }
# `tower` is already in the tree as a transitive dep of axum 0.8; we depend
# on it directly for `ConcurrencyLimitLayer`. `tower_governor` (per-IP rate
# limiting) extends this with keyed quotas -- see `router::build()` for the
# composition.
tower = { version = "0.5.3", features = ["limit"] }
# `trace` powers the per-request access log mounted in `router::build`.
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tower_governor = "0.8.0"
# Streaming flatfile bytes back to clients via `ReaderStream` (issue #432).
# Transitive dep of axum already; declared directly so the route module's
# `tokio_util::io::ReaderStream` import is sourced from a pinned version.
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
# `json` backs `--log-format json`.
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
# Daily-rotated log file behind `--log-file` with a non-blocking writer.
tracing-appender = "0.2.4"
# Wall-clock timestamp for the `--log-format legacy` bracketed line shape.
# Already in-tree as a transitive dependency of tracing-appender; declared
# directly because the legacy event formatter calls it.
time = "0.3"
# `serde_urlencoded` parses the raw query string inside the custom
# `BoundedQuery` extractor. It's already in-tree as an axum transitive
# dep; the direct dependency here keeps the extractor self-contained
# and immune to future axum internals shifting.
serde_urlencoded = "0.7.1"
clap = { version = "4.6.1", features = ["derive"] }
# Cryptographically random bytes for the shutdown token.
rand = "0.10"

# `Zeroizing<String>` scrubs the CLI password from the process's memory
# image as soon as it drops. Without this, `/proc/<pid>/mem` (or a core
# dump) would retain the plaintext for the lifetime of the process even
# after `Credentials` internally moved it into its own `Zeroizing`.
zeroize = "1.8.2"

# Hidden (non-echoing) password read for the first-run credentials prompt.
# The returned `String` is moved straight into `Zeroizing` so the typed
# password is scrubbed from the heap on drop, matching the existing
# `--password` flag path.
rpassword = "7.5.4"

# Match the main workspace's strict bar. This crate declares its own
# `[workspace]` table (line 15) so it's an independent workspace — it
# can't inherit via `[lints] workspace = true` from the parent repo.
# Mirror the rules locally to keep `cargo clippy` parity.
[dev-dependencies]
# `util` provides `ServiceExt::oneshot`, used by the rate-limit wire tests
# to drive the governor composition with an injected peer `ConnectInfo`
# without binding a real socket or a live upstream client.
tower = { version = "0.5.3", features = ["limit", "util"] }

[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
